Stop collecting GC logs